# BudgetMem

./: .gitignore  README copy.md  README.md  pyproject.toml  requirements.txt
docs/: index.html
scripts/: train_hotpotqa.sh  train_locomo.sh  train_longmemeval.sh
src/: __init__.py  config.py
src/modules/: __init__.py  model_tier.py  prompt_tier.py  rule_llm.py
src/prompts/: __init__.py  prompt_pool.py
src/trainer/: __init__.py  module_description.py  ppo_trainer.py
src/utils/: __init__.py  eval_utils.py  llm_pricing.py  llm_utils.py  rag_utils.py
tests/: test_utils.py  test_utils_hotpotqa.py  test_utils_longmemeval.py
train/: train_hotpotqa.py  train_locomo.py  train_longmemeval.py
